--- a/cli-front/package.json
+++ b/cli-front/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-permissions": "^8.1.1",
     "ngx-spinner": "^10.0.1",
