--- a/cli-front/package.json
+++ b/cli-front/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-mask": "^11.1.5",
     "ngx-permissions": "^8.1.1",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
